--- a/MI138_GroupProject/Views/Manage/Index.cshtml
+++ b/MI138_GroupProject/Views/Manage/Index.cshtml
@@ -8,6 +8,9 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     <h4>Change your account settings</h4>
+    <p>
+        @ViewBag.Password
+    </p>
     <hr />
     <dl class="dl-horizontal">
         <dt>Password:</dt>
