--- a/MI138_GroupProject/Views/Games/Index.cshtml
+++ b/MI138_GroupProject/Views/Games/Index.cshtml
@@ -9,37 +9,22 @@
 <p>
     @*@Html.ActionLink("Create New", "Create")*@
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ScreenshotUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            <img width="150" src="@Html.DisplayFor(modelItem => item.ScreenshotUrl)" />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Created)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.ID }) |*@
-            @Html.ActionLink("Details", "Details", new { id=item.ID })
-            @*@Html.ActionLink("Delete", "Delete", new { id=item.ID })*@
-        </td>
-    </tr>
-}
-
-</table>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="@Html.DisplayFor(modelItem => item.ScreenshotUrl)" alt="..." style="height: 200px; width: 100%; display: block;">
+                <div class="caption">
+                    <h3>@Html.DisplayFor(modelItem => item.Name)</h3>
+                    <p>
+                        @Html.DisplayFor(modelItem => item.Created)
+                    </p>
+                    <p>
+                        <a href="@Url.Action("Details", "Games", new { id = item.ID })" class="btn btn-primary" role="button">Details</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
