--- a/MI138_GroupProject/Views/Shared/_Layout.cshtml
+++ b/MI138_GroupProject/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MI138 Project", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MI138 Project", "Index", "Games", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Games")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
