--- a/MI138_GroupProject/Views/Games/IndexAdmin.cshtml
+++ b/MI138_GroupProject/Views/Games/IndexAdmin.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<MI138_GroupProject.Models.Game>
 
 @{
-    ViewBag.Title = "IndexAdmin";
+    ViewBag.Title = "Index Admin";
 }
 
-<h2>Index</h2>
+<h2>Games</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -22,7 +19,6 @@
         </th>
         <th></th>
     </tr>
-
     @foreach (var item in Model)
     {
         <tr>
@@ -36,9 +32,19 @@
                 @Html.DisplayFor(modelItem => item.Created)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID }) |
+                @{
+                    if (!item.Published)
+                    {
+                        @Html.ActionLink("Publish", "Publish", new { id = item.ID })
+                    }
+                    else
+                    {
+                        <p>Published</p>
+                    }
+                }
             </td>
         </tr>
     }
