--- a/MI138_GroupProject/Views/Games/CreateReview.cshtml
+++ b/MI138_GroupProject/Views/Games/CreateReview.cshtml
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Positive, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Recommend</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.Positive)
