--- a/MI138_GroupProject/Views/Comment/Create.cshtml
+++ b/MI138_GroupProject/Views/Comment/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MI138_GroupProject.Models.Comment
+﻿@model MI138_GroupProject.Models.Review
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Comment</h4>
+        <h4>Review</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
