--- a/MI138_GroupProject/Views/Review/Delete.cshtml
+++ b/MI138_GroupProject/Views/Review/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MI138_GroupProject.Models.Comment
+﻿@model MI138_GroupProject.Models.Review
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Comment</h4>
+    <h4>Review</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
