--- a/MI138_GroupProject/Views/Games/Index.cshtml
+++ b/MI138_GroupProject/Views/Games/Index.cshtml
@@ -10,7 +10,7 @@
     @*@Html.ActionLink("Create New", "Create")*@
 </p>
 <div class="row">
-    @foreach (var item in Model)
+    @foreach (var item in Model.Where(g => g.Published == true))
     {
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
