set up web shop

--- a/MI138_GroupProject/Views/Games/Details.cshtml
+++ b/MI138_GroupProject/Views/Games/Details.cshtml
@@ -15,6 +15,8 @@
             <img class="card-img-top" src="@Html.DisplayFor(model => model.ScreenshotUrl)" alt="Card image cap">
         </div>
         <div class="col-md-4">
+            <b>Tag</b>
+            <p>@Model.Tags</p>
             <b>Created date</b>
             <p>@Html.DisplayFor(model => model.Created)</p>
             <b>Created by</b>
